@@ -18,7 +18,7 @@ iati-activity img	{display:block;}
 title:nth-of-type(1) 		{display:block; font-size:42px; width:880px; padding:40px; margin:0 auto; color:#fff;}
 title:nth-of-type(1):before {content:"PROJECT TITLE"; font-size:14px; color:#ccc; display:block; margin-bottom:5px;}
 
-iati-identifier 		{display:block; background-color: rgba(0,14,32,0.7); width:880px; text-align:center; font-size:16px; padding:15px 40px; color:#FF7A00; margin:0 auto;}
+iati-identifier 		{display:block; background-color: rgba(0,14,32,0.7); width:880px; text-align:center; font-size:1.0em; padding:15px 40px; color:#FF7A00; margin:0 auto;}
 iati-identifier:before	{content:"IATI IDENTIFIER"; font-size:14px; color:#ccc; display:inline-block; padding-right:5px;}
 iati-identifier:hover	{color:#FFAB5E;}
 a.a_iati-identifier		{width:960px; margin:0 auto;}
@@ -47,7 +47,7 @@ reporting-org:before {content:"This activity is reported by"; display:inline-blo
 reporting-org:nth-of-type(1)	{padding-top:40px;}
 reporting-org:last-of-type		{padding-bottom:40px;}
 
-description {font-size:16px; word-spacing:0.05em; line-height:1.45em; display:block; width:880px; padding:40px; padding-bottom:0; color:#fff;}
+description {font-size:1.0em; word-spacing:0.05em; line-height:1.45em; display:block; width:880px; padding:40px; padding-bottom:0; color:#fff;}
 description:nth-of-type(1):before {content:"DESCRIPTION"; font-size:14px; color:#ccc; display:block; margin-bottom:5px;}
 description[type="1"]:before	{content:"GENERAL"; font-size:14px; color:#ccc; display:block; margin-bottom:5px;}
 description[type="2"]:before	{content:"OBJECTIVES"; font-size:14px; color:#ccc; display:block; margin-bottom:5px;}
@@ -55,7 +55,7 @@ description[type="3"]:before	{content:"TARGET GROUPS"; font-size:14px; color:#cc
 description:last-of-type		{padding-bottom:40px;}
 
 sector *						{display:none;}
-sector[vocabulary="DAC"]		{font-size:16px; color:#fff; width:240px; display:inline-block; vertical-align:top; padding:30px 40px; max-height:80px; min-height:80px;}
+sector[vocabulary="DAC"]		{font-size:1.0em; color:#fff; width:240px; display:inline-block; vertical-align:top; padding:30px 40px; max-height:80px; min-height:80px;}
 sector:nth-child(even)			{background-color:rgba(0,14,32,0.7);}
 sector[vocabulary="DAC"]:before	{content:"SECTOR"; font-size:14px; color:#ccc; width:240px; display:block; padding-bottom:5px;}
 sector span						{color:#fff;}
@@ -70,20 +70,20 @@ transaction:last-of-type		{border-bottom:0px solid #1E90FF;}
 transaction:nth-of-type(1)		{margin-top:0px; padding-top:0;}
 transaction:nth-of-type(1):before	{content:"Transaction"; font-size:26px; color:#fff; background-color:rgba(17, 46, 105, 0.9); display:block; padding:20px 40px; margin-bottom:25px;}
 
-transaction:nth-of-type(1) transaction-date:before	{content:"DATE"; font-size:14px; color:#fff; width:110px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
-transaction:nth-of-type(1) transaction-type:before	{content:"TYPE"; font-size:14px; color:#fff; width:150px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
-transaction:nth-of-type(1) provider-org:before		{content:"PROVIDER"; font-size:14px; color:#fff; width:150px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
-transaction:nth-of-type(1) receiver-org:before		{content:"RECEIVER"; font-size:14px; color:#fff; width:150px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
-transaction:nth-of-type(1) value:before				{content:"VALUE"; font-size:14px; color:#fff; width:100px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
+transaction:nth-of-type(1) transaction-date:before	{content:"DATE"; font-size:14px; color:#fff; width:110px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
+transaction:nth-of-type(1) transaction-type:before	{content:"TYPE"; font-size:14px; color:#fff; width:150px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
+transaction:nth-of-type(1) provider-org:before		{content:"PROVIDER"; font-size:14px; color:#fff; width:150px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
+transaction:nth-of-type(1) receiver-org:before		{content:"RECEIVER"; font-size:14px; color:#fff; width:150px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
+transaction:nth-of-type(1) value:before				{content:"VALUE"; font-size:14px; color:#fff; width:100px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
 transaction description:nth-of-type(n+1):before		{display:none;}
-transaction:nth-of-type(1) description:nth-of-type(1):before {content:"DESCRIPTION"; font-size:14px; color:#fff; width:240px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1em;}
+transaction:nth-of-type(1) description:nth-of-type(1):before {content:"DESCRIPTION"; font-size:14px; color:#fff; width:240px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
 
-transaction-date	{display:table-cell; color:#fff; font-size:16px; width:100px; max-width:100px; padding-left:40px; padding-right:10px;}
-transaction-type	{display:table-cell; color:#fff; font-size:16px; width:130px; max-width:130px; padding-right:20px;}
-transaction description:nth-of-type(1) {display:table-cell; color:#fff; font-size:16px; padding:0px; background-color:transparent; width:220px; max-width:220px; line-height:1.35em; padding-right:20px; text-align:left;}
-provider-org	{display:table-cell; color:#fff; font-size:16px; width:130px; max-width:130px; padding-right:20px;}
-receiver-org	{display:table-cell; color:#fff; font-size:16px; width:130px; max-width:130px; padding-right:0px;}
-value			{display:table-cell; color:#fff; text-align:right; font-size:16px; width:100px; max-width:100px; padding-right:40px;}
+transaction-date	{display:table-cell; color:#fff; font-size:1.0em; width:100px; max-width:100px; padding-left:40px; padding-right:10px; line-height:1.35em;}
+transaction-type	{display:table-cell; color:#fff; font-size:1.0em; width:130px; max-width:130px; padding-right:20px; line-height:1.35em;}
+transaction description:nth-of-type(1) {display:table-cell; color:#fff; font-size:1.0em; padding:0px; background-color:transparent; width:220px; max-width:220px; padding-right:20px; text-align:left; line-height:1.35em;}
+provider-org	{display:table-cell; color:#fff; font-size:1.0em; width:130px; max-width:130px; padding-right:20px; line-height:1.35em;}
+receiver-org	{display:table-cell; color:#fff; font-size:1.0em; width:130px; max-width:130px; padding-right:0px; line-height:1.35em;}
+value			{display:table-cell; color:#fff; text-align:right; font-size:1.0em; width:100px; max-width:100px; padding-right:40px; line-height:1.35em;}
 value span		{font-size:12px; color:#ccc;}
 
 contact-info	{display:block; width:880px; padding:10px 40px; font-size:18px;}
@@ -109,16 +109,16 @@ budget	{display:block; width:960px; border-top:1px solid #1E90FF; padding:20px 0
 budget:last-of-type	  {border-bottom:0px solid #1E90FF;}
 budget:nth-of-type(1) {margin-top:0px; padding-top:0;}
 budget:nth-of-type(1):before {content:"Budget"; font-size:26px; color:#fff; background-color:rgba(17, 46, 105, 0.9); display:block; padding:20px 40px; margin-bottom:25px;}
-budget:nth-of-type(1) period-start:before {content:"START DATE"; font-size:14px; color:#fff; width:290px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
-budget:nth-of-type(1) period-end:before	  {content:"END DATE"; font-size:14px; color:#fff; width:290px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
-budget:nth-of-type(1) value:before		  {content:"VALUE"; font-size:14px; color:#fff; width:300px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
-period-start {display:table-cell; color:#fff; font-size:16px; width:290px; max-width:290px; padding-left:40px;}
-period-end	 {display:table-cell; color:#fff; font-size:16px; width:290px; max-width:290px;}
-budget value {display:table-cell; color:#fff; font-size:16px; width:300px; max-width:300px; padding-right:40px;}
+budget:nth-of-type(1) period-start:before {content:"START DATE"; font-size:14px; color:#fff; width:290px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
+budget:nth-of-type(1) period-end:before	  {content:"END DATE"; font-size:14px; color:#fff; width:290px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
+budget:nth-of-type(1) value:before		  {content:"VALUE"; font-size:14px; color:#fff; width:300px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
+period-start {display:table-cell; color:#fff; font-size:1.0em; width:290px; max-width:290px; padding-left:40px; line-height:1.35em;}
+period-end	 {display:table-cell; color:#fff; font-size:1.0em; width:290px; max-width:290px; line-height:1.35em;}
+budget value {display:table-cell; color:#fff; font-size:1.0em; width:300px; max-width:300px; padding-right:40px; line-height:1.35em;}
 
 a.a_document-link	{display:block; width:880px; padding:10px 40px;}
 document-link		{display:block;}
-document-link span	{font-size:16px; display:block; color:#ccc; padding-bottom:30px;}
+document-link span	{font-size:1.0em; display:block; color:#ccc; padding-bottom:30px;}
 document-link title:nth-of-type(n+1):before	{display:none;}
 document-link title:nth-of-type(n+1)		{border:0; margin:0; padding:0; width:800px; font-size:18px; display:list-item; list-style-type:circle; list-style-position:outside; line-height:1.15em;}
 
@@ -134,12 +134,12 @@ a.a_related-activity:before	{content:"Family Tree"; font-size:34px; color:#fff; 
 /* Select all but the first a.a_related-activity child of iati-activity, and remove the content from the previous rule. */
 iati-activity  > a.a_related-activity ~ a.a_related-activity:before	{content:""; padding:0; margin:0; border:0;}
 
-a.a_related-activity	{display:block; width:880px; padding:20px 40px 0 40px; font-size:18px;}
+a.a_related-activity	{display:block; width:880px; padding:20px 40px 0 40px; font-size:1.0em; line-height:1.25em;}
 a.a_related-activity:last-of-type								{padding-bottom:40px;}
 iati-activity  > a.a_related-activity ~ a.a_related-activity	{padding-top:10px;}
 related-activity		{display:inline; color:#FF7A00;}
 related-activity:hover	{color:#FFAB5E;}
-related-activity:before	{display:inline-block; padding-right:5px; color:#ccc; font-size:18px;}
+related-activity:before	{display:inline-block; padding-right:5px; color:#ccc; font-size:1.0em; line-height:1.25em;}
 related-activity[type="1"]:before	{content:"Child of ";}
 related-activity[type="2"]:before	{content:"Parent of ";}
 related-activity[type="3"]:before	{content:"Sibling of ";}
