@@ -3,6 +3,7 @@ Development Portal (2014-04-01 shi)
 Added title to Key Figures
 Added more icons
 Adding charts to main view
+SAVi change line-height in tables for better legibility
 
 Development Portal (2014-03-31 shi)
 ==============================
